--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ crispy-bootstrap5==2024.2
 decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
+dj-database-url==2.1.0
 Django==5.0.3
 django-crispy-forms==2.1
+django-heroku==0.3.1
 djangorestframework==3.15.1
 docopt==0.6.2
 executing==2.0.1
@@ -30,6 +32,7 @@ google-generativeai==0.4.1
 googleapis-common-protos==1.63.0
 grpcio==1.62.1
 grpcio-status==1.62.1
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.4
 httplib2==0.22.0
@@ -61,6 +64,7 @@ platformdirs==4.2.0
 prompt-toolkit==3.0.43
 proto-plus==1.23.0
 protobuf==4.25.3
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -92,4 +96,5 @@ uritemplate==4.1.1
 urllib3==2.2.1
 wcwidth==0.2.13
 webencodings==0.5.1
+whitenoise==6.6.0
 yarg==0.1.9
